--- a/index.html
+++ b/index.html
@@ -10,6 +10,29 @@
 
 </head>
 <body>
+    <div class="header mb-5">
+    <h1 class="frontpage"> Welcome! Have a look around </h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-6"></div>
+            <div class="col-6 mt-4"> <h2> and tell me what you think 🤙 </h2>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="footer mt-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-4">    <img class="portrait img-fluid" src="media/me.jpg" alt="Picture of Niniane Rheinfurth">
+            </div>
+    <div class="col-4">
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quae, asperiores nesciunt, pariatur quaerat delectus, placeat expedita repellat eveniet neque dolores inventore rem totam recusandae consectetur laborum hic obcaecati. Quae.</p>
+    </div>
+    <div class="col-2"></div>
+</div>
+</div>
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
