--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="row">
             <div class="col-6"></div>
-            <div class="col-6 mt-4"> <h2> and tell me what you think 🤙 </h2>
+            <div class="col-6 mt-4 subline"> <h2> and tell me what you think 🤙 </h2>
             </div>
         </div>
     </div>
