--- a/index.html
+++ b/index.html
@@ -10,6 +10,31 @@
 
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg bg-light fixed-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            Nini Rheinfurth
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" href="about.html#contact">Contact</a>
+              <a class="nav-link active" href="about.html">About</a>
+            </div>
+          </div>
+        </div>
+      </nav>
     <div class="header mb-5">
     <h1 class="frontpage"> Welcome! Have a look around </h1>
     <div class="container">
