--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               <a class="nav-link" href="about.html#contact">Contact</a>
-              <a class="nav-link active" href="about.html">About</a>
+              <a class="nav-link" href="work.html">Portfolio</a>
             </div>
           </div>
         </div>
