--- a/work.html
+++ b/work.html
@@ -28,12 +28,32 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
-              <a class="nav-link" href="about.html#contact">Contact</a>
               <a class="nav-link active" href="work.html">Portfolio</a>
+              <a class="nav-link" href="about.html#contact">Contact</a>
             </div>
           </div>
         </div>
       </nav>
+      <div class="header mb-5">
+        <h1 class="frontpage"> My work </h1>
+        </div>
+    </div>
+    <div class="footer mt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-2"></div>
+                <div class="col-4">    <img class="portrait img-fluid" src="media/me.jpg" alt="Picture of Niniane Rheinfurth">
+                </div>
+        <div class="col-4">
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quae, asperiores nesciunt, pariatur quaerat delectus, placeat expedita repellat eveniet neque dolores inventore rem totam recusandae consectetur laborum hic obcaecati. Quae.</p>
+        </div>
+        <div class="col-2"></div>
+    </div>
+    </div>
+    </div>
+    <div class="footnote">
+        <p> This website has been coded by Niniane Rheinfurth and is <a href="#"> open-source. </a></p>
+    </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
