added portfolio pictures

--- a/work.html
+++ b/work.html
@@ -34,20 +34,23 @@
           </div>
         </div>
       </nav>
-      <div class="header mb-5">
-        <h1 class="frontpage"> My work </h1>
+      <div class="header mb-5 mt-3">
+        <h1 class="frontpage portfolio"> My work </h1>
         </div>
     </div>
     <div class="footer mt-5">
         <div class="container">
             <div class="row">
-                <div class="col-2"></div>
-                <div class="col-4">    <img class="portrait img-fluid" src="media/me.jpg" alt="Picture of Niniane Rheinfurth">
+                <div class="col">    <img class="portrait img-fluid work-screenshot" src="media/aMAR-website.png" alt="Picture of Niniane Rheinfurth">
                 </div>
-        <div class="col-4">
+        <div class="col">
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quae, asperiores nesciunt, pariatur quaerat delectus, placeat expedita repellat eveniet neque dolores inventore rem totam recusandae consectetur laborum hic obcaecati. Quae.</p>
         </div>
-        <div class="col-2"></div>
+        <div class="col">    <img class="portrait img-fluid work-screenshot" src="media/WeatherApp.png" alt="Picture of Niniane Rheinfurth">
+        </div>
+<div class="col">
+    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quae, asperiores nesciunt, pariatur quaerat delectus, placeat expedita repellat eveniet neque dolores inventore rem totam recusandae consectetur laborum hic obcaecati. Quae.</p>
+</div>
     </div>
     </div>
     </div>
