Added media query, responsive bootstrap classes

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <h1 class="frontpage"> Welcome! Have a look around </h1>
     <div class="container">
         <div class="row">
-            <div class="col-6"></div>
-            <div class="col-6 mt-4 subline"> <h2> and tell me what you think 🤙 </h2>
+            <div class="col-md-6"></div>
+            <div class="col-md-6 mt-4 subline"> <h2> and tell me what you think 🤙 </h2>
             </div>
         </div>
     </div>
@@ -48,13 +48,13 @@
 <div class="footer mt-5">
     <div class="container">
         <div class="row">
-            <div class="col-2"></div>
-            <div class="col-4">    <img class="portrait img-fluid" src="media/me.jpg" alt="Picture of Niniane Rheinfurth">
+            <div class="col-md-2"></div>
+            <div class="col-md-4">    <img class="portrait img-fluid mb-4" src="media/me.jpg" alt="Picture of Niniane Rheinfurth">
             </div>
-    <div class="col-4">
+    <div class="col-md-4">
         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quae, asperiores nesciunt, pariatur quaerat delectus, placeat expedita repellat eveniet neque dolores inventore rem totam recusandae consectetur laborum hic obcaecati. Quae.</p>
     </div>
-    <div class="col-2"></div>
+    <div class="col-md-2"></div>
 </div>
 </div>
 </div>
