--- a/work.html
+++ b/work.html
@@ -41,15 +41,21 @@
     <div class="footer mt-5">
         <div class="container">
             <div class="row">
-                <div class="col">    <img class="portrait img-fluid work-screenshot" src="media/aMAR-website.png" alt="Picture of Niniane Rheinfurth">
+                <div class="col-md">    <img class="portrait img-fluid work-screenshot" src="media/aMAR-website.png" alt="Picture of Niniane Rheinfurth">
                 </div>
-        <div class="col">
+        <div class="col-md">
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quae, asperiores nesciunt, pariatur quaerat delectus, placeat expedita repellat eveniet neque dolores inventore rem totam recusandae consectetur laborum hic obcaecati. Quae.</p>
+            <button class="primary">
+              <a href="#">Go to project</a>
+            </button>
         </div>
-        <div class="col">    <img class="portrait img-fluid work-screenshot" src="media/WeatherApp.png" alt="Picture of Niniane Rheinfurth">
+        <div class="col-md">    <img class="portrait img-fluid work-screenshot" src="media/WeatherApp.png" alt="Picture of Niniane Rheinfurth">
         </div>
-<div class="col">
+<div class="col-md">
     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quae, asperiores nesciunt, pariatur quaerat delectus, placeat expedita repellat eveniet neque dolores inventore rem totam recusandae consectetur laborum hic obcaecati. Quae.</p>
+    <button class="primary"> 
+      <a href="#">Go to project</a>
+    </button>
 </div>
     </div>
     </div>
