--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,20 @@
           </div>
         </div>
       </nav>
+      <div class="footer contact-section">
+        <h1> Let's get in touch! </h1>
+        <div class="contact-links">
+          <span>
+            ICON LinkedIn
+          </span>
+          <span>
+            ICON Email
+          </span>
+        </div>
+    </div>
+    <div class="footnote">
+        <p> This website has been coded by Niniane Rheinfurth and is <a href="#"> open-source. </a></p>
+    </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
