worked more on media query, added link to contact icon

--- a/contact.html
+++ b/contact.html
@@ -38,10 +38,10 @@
         <h1> Let's get in touch! </h1>
         <div class="contact-links">
           <span>
-            ICON LinkedIn
+            <a href="#">ICON</a>  LinkedIn
           </span>
           <span>
-            ICON Email
+            <a href="#">ICON</a> Email
           </span>
         </div>
     </div>
