--- a/work.html
+++ b/work.html
@@ -38,10 +38,10 @@
         <h1 class="frontpage portfolio"> My work </h1>
         </div>
     </div>
-    <div class="footer mt-5">
+    <div class="footer portfolio-section mt-5">
         <div class="container">
             <div class="row">
-                <div class="col-md">    <img class="portrait img-fluid work-screenshot" src="media/aMAR-website.png" alt="Picture of Niniane Rheinfurth">
+                <div class="col-md">    <img class="portrait img-fluid work-screenshot" src="media/aMAR-website.png" alt="Picture of first HTML project: Landing Page">
                 </div>
         <div class="col-md">
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quae, asperiores nesciunt, pariatur quaerat delectus, placeat expedita repellat eveniet neque dolores inventore rem totam recusandae consectetur laborum hic obcaecati. Quae.</p>
@@ -49,7 +49,7 @@
               <a href="#">Go to project</a>
             </button>
         </div>
-        <div class="col-md">    <img class="portrait img-fluid work-screenshot" src="media/WeatherApp.png" alt="Picture of Niniane Rheinfurth">
+        <div class="col-md">    <img class="portrait img-fluid work-screenshot" src="media/WeatherApp.png" alt="Picture of Weather App">
         </div>
 <div class="col-md">
     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quae, asperiores nesciunt, pariatur quaerat delectus, placeat expedita repellat eveniet neque dolores inventore rem totam recusandae consectetur laborum hic obcaecati. Quae.</p>
