Worked on media query and contact links
Added icons and links to the pages

--- a/contact.html
+++ b/contact.html
@@ -36,13 +36,17 @@
       </nav>
       <div class="footer contact-section">
         <h1> Let's get in touch! </h1>
-        <div class="contact-links">
-          <span>
-            <a href="#">ICON</a>  LinkedIn
-          </span>
-          <span>
-            <a href="#">ICON</a> Email
-          </span>
+        <div class="contact-links d-flex">
+          <div class="contact-medium">
+          <a href="https://www.linkedin.com/in/niniane-rheinfurth-5a0820a7/" target="_blank" title="Link to my LinkedIn Profile"> <img src="media/linkedin.svg" alt="LinkedIn Icon" class="contact-icon" width="40"></a> LinkedIn
+          </div> 
+          <div class="contact-medium">
+            <a href="https://github.com/Nini-ane" target="_blank" title="Link to my GitHub Profile"> <img src="media/square-github.svg" alt="GitHub Icon" class="contact-icon" width="40"></a> GitHub
+          </div>
+          <div class="contact-medium">
+            <a href="mailto:niniane.rheinfurth@googlemail.com"> <img src="media/envelope-solid.svg" alt="Email Icon" class="contact-icon" width="40"> </a> Email
+          </div>
+         
         </div>
     </div>
     <div class="footnote">
