Worked on Styling and Media Query

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             <div class="col-md-2"></div>
             <div class="col-md-4">    <img class="portrait img-fluid mb-4" src="media/me.jpg" alt="Picture of Niniane Rheinfurth">
             </div>
-    <div class="col-md-4">
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quae, asperiores nesciunt, pariatur quaerat delectus, placeat expedita repellat eveniet neque dolores inventore rem totam recusandae consectetur laborum hic obcaecati. Quae.</p>
+    <div class="intro col-md-4">
+        <p> Hi! My name is Nini and I am a front-end developer from Germany. I have always been interested in learning more. So in Spring 2022 I decided to learn programming. I started with a basics class for HTML and CSS and have now finished first projects using JavaScript as well! Next up will be diving deeper into React, which I am very excited about. </p>
     </div>
     <div class="col-md-2"></div>
 </div>
