--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
         </div>
     </div>
     <div class="footnote">
-        <p> This website has been coded by Niniane Rheinfurth and is <a href="#"> open-source. </a></p>
+        <p> This website has been coded by Niniane Rheinfurth and is <a href="https://github.com/Nini-ane/portfolio-project.git" target="_blank" class="git-link"> open-source. </a></p>
     </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
