--- a/index.html
+++ b/index.html
@@ -37,14 +37,9 @@
       </nav>
     <div class="header mb-5">
     <h1 class="frontpage"> Welcome! Have a look around </h1>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6"></div>
-            <div class="col-md-6 mt-4 subline"> <h2> and tell me what you think 🤙 </h2>
-            </div>
-        </div>
+    <br/>
+         <h2 class="subtitle"> and tell me what you think 🤙 </h2>
     </div>
-</div>
 <div class="footer mt-5">
     <div class="container">
         <div class="row">
@@ -52,14 +47,14 @@
             <div class="col-md-4">    <img class="portrait img-fluid mb-4" src="media/me.jpg" alt="Picture of Niniane Rheinfurth">
             </div>
     <div class="intro col-md-4">
-        <p> Hi! My name is Nini and I am a front-end developer from Germany. I have always been interested in learning more. So in Spring 2022 I decided to learn programming. I started with a basics class for HTML and CSS and have now finished first projects using JavaScript as well! Next up will be diving deeper into React, which I am very excited about. </p>
+        <p> Hi! My name is Nini and I am a front-end developer from Germany. I have always been interested in learning more. So in Spring 2022 I decided to learn programming. I started with a basics class for HTML and CSS and have now finished first projects using JavaScript as well! Next up will be diving deeper into React, which I am very excited about. Stay tuned ... </p>
     </div>
     <div class="col-md-2"></div>
 </div>
 </div>
 </div>
 <div class="footnote">
-    <p> This website has been coded by Niniane Rheinfurth and is <a href="#"> open-source. </a></p>
+    <p> This website has been coded by Niniane Rheinfurth and is <a href="https://github.com/Nini-ane/portfolio-project.git" target="_blank" class="git-link"> open-source. </a></p>
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
