--- a/work.html
+++ b/work.html
@@ -41,27 +41,29 @@
     <div class="footer portfolio-section mt-5">
         <div class="container">
             <div class="row">
-                <div class="col-md">    <img class="img-fluid work-screenshot" src="media/aMAR-website.png" alt="Picture of first HTML project: Landing Page">
+                <div class="col-md">
+                  <img class="img-fluid work-screenshot" src="media/aMAR-website.png" alt="Picture of first HTML project: Landing Page">
                 </div>
         <div class="col-md">
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quae, asperiores nesciunt, pariatur quaerat delectus, placeat expedita repellat eveniet neque dolores inventore rem totam recusandae consectetur laborum hic obcaecati. Quae.</p>
+            <p> This was my first try ever, using HTML and CSS. I recreated a landing page for my Etsy Shop a MAR Berlin and I have to say, I was really proud of that first exercise! I learned that it can take hours to get minute design details right, but to me, that is deinitely part of the fun. I love design and trying out as much as getting the code to work.</p>
             <button class="project-button">
-              <a href="#" class="project-link">Go to project</a>
+              <a href="https://www.shecodes.io/workshops/shecodes-basics-d35c1bc7-1270-4972-a11b-ea4b0e7dec00/projects/797195" target="_blank" class="project-link">Go to project</a>
             </button>
         </div>
-        <div class="col-md">    <img class="img-fluid work-screenshot" src="media/WeatherApp.png" alt="Picture of Weather App">
+        <div class="col-md">
+          <img class="img-fluid work-screenshot" src="media/WeatherApp.png" alt="Picture of Weather App">
         </div>
 <div class="col-md">
-    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quae, asperiores nesciunt, pariatur quaerat delectus, placeat expedita repellat eveniet neque dolores inventore rem totam recusandae consectetur laborum hic obcaecati. Quae.</p>
+    <p> For my second project, I coded a Weather App, using JavaScript, HTML and CSS as well as a weather API. JavaScript functions were definitely a step up from the basics, but the relief and joy was incredible, when I finally got things to work after hours of Google searches... It is incredible what you are able to do with these and I can not wait to learn more.</p>
     <button class="project-button"> 
-      <a href="#" class="project-link">Go to project</a>
+      <a href="https://www.shecodes.io/workshops/shecodes-plus-8083a7b3-8d70-4e0b-90d2-781cf61cdbc6/projects/1030979" target="_blank" class="project-link">Go to project</a>
     </button>
 </div>
     </div>
     </div>
     </div>
     <div class="footnote">
-        <p> This website has been coded by Niniane Rheinfurth and is <a href="#"> open-source. </a></p>
+        <p> This website has been coded by Niniane Rheinfurth and is <a href="https://github.com/Nini-ane/portfolio-project.git" target="_blank" class="git-link"> open-source. </a></p>
     </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
