--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Me</title>
+    <title>Get in touch with Nini Rheinfurth</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-light fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="index.html">
             Nini Rheinfurth
           </a>
           <button
@@ -44,13 +44,13 @@
             <a href="https://github.com/Nini-ane" target="_blank" title="Link to my GitHub Profile"> <img src="media/square-github.svg" alt="GitHub Icon" class="contact-icon" width="40"></a> GitHub
           </div>
           <div class="contact-medium">
-            <a href="mailto:niniane.rheinfurth@googlemail.com"> <img src="media/envelope-solid.svg" alt="Email Icon" class="contact-icon" width="40"> </a> Email
+            <a href="mailto:niniane.rheinfurth@googlemail.com" title="Send me an Email"> <img src="media/envelope-solid.svg" alt="Email Icon" class="contact-icon" width="40"> </a> Email
           </div>
          
         </div>
     </div>
     <div class="footnote">
-        <p> This website has been coded by Niniane Rheinfurth and is <a href="https://github.com/Nini-ane/portfolio-project.git" target="_blank" class="git-link"> open-source. </a></p>
+        <p> This website has been coded by Niniane Rheinfurth and is <a href="https://github.com/Nini-ane/portfolio-project.git" target="_blank" class="git-link" title="Link to GitHub Repository"> open-source. </a></p>
     </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
