--- a/work.html
+++ b/work.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Nini</title>
+    <title>Project Portfolio - About Nini's Work</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-light fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="index.html">
             Nini Rheinfurth
           </a>
           <button
@@ -35,7 +35,7 @@
         </div>
       </nav>
       <div class="header mb-5 mt-3">
-        <h1 class="frontpage portfolio"> My work </h1>
+        <h1 class="portfolio"> My work </h1>
         </div>
     </div>
     <div class="footer portfolio-section mt-5">
@@ -47,7 +47,7 @@
         <div class="col-md">
             <p> This was my first try ever, using HTML and CSS. I recreated a landing page for my Etsy Shop a MAR Berlin and I have to say, I was really proud of that first exercise! I learned that it can take hours to get minute design details right, but to me, that is deinitely part of the fun. I love design and trying out as much as getting the code to work.</p>
             <button class="project-button">
-              <a href="https://www.shecodes.io/workshops/shecodes-basics-d35c1bc7-1270-4972-a11b-ea4b0e7dec00/projects/797195" target="_blank" class="project-link">Go to project</a>
+              <a href="https://www.shecodes.io/workshops/shecodes-basics-d35c1bc7-1270-4972-a11b-ea4b0e7dec00/projects/797195" target="_blank" class="project-link" title="Link to Landing Page Project">Go to project</a>
             </button>
         </div>
         <div class="col-md">
@@ -56,14 +56,14 @@
 <div class="col-md">
     <p> For my second project, I coded a Weather App, using JavaScript, HTML and CSS as well as a weather API. JavaScript functions were definitely a step up from the basics, but the relief and joy was incredible, when I finally got things to work after hours of Google searches... It is incredible what you are able to do with these and I can not wait to learn more.</p>
     <button class="project-button"> 
-      <a href="https://www.shecodes.io/workshops/shecodes-plus-8083a7b3-8d70-4e0b-90d2-781cf61cdbc6/projects/1030979" target="_blank" class="project-link">Go to project</a>
+      <a href="https://www.shecodes.io/workshops/shecodes-plus-8083a7b3-8d70-4e0b-90d2-781cf61cdbc6/projects/1030979" target="_blank" class="project-link" title="Link to Weather App">Go to project</a>
     </button>
 </div>
     </div>
     </div>
     </div>
     <div class="footnote">
-        <p> This website has been coded by Niniane Rheinfurth and is <a href="https://github.com/Nini-ane/portfolio-project.git" target="_blank" class="git-link"> open-source. </a></p>
+        <p> This website has been coded by Niniane Rheinfurth and is <a href="https://github.com/Nini-ane/portfolio-project.git" target="_blank" class="git-link" title="Link to GitHub Repository"> open-source. </a></p>
     </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
