More Link titles

--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,8 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
-              <a class="nav-link" href="/work.html">Portfolio</a>
-              <a class="nav-link active" href="/contact.html">Contact</a>
+              <a class="nav-link" href="/work.html" title="Go to work overview">Portfolio</a>
+              <a class="nav-link active" href="/contact.html" title="Go to Contact page">Contact</a>
             </div>
           </div>
         </div>
