--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-              <a class="nav-link" href="/work.html">Portfolio</a>
-              <a class="nav-link" href="/contact.html">Contact</a>
+              <a class="nav-link active" aria-current="page" href="index.html" title="Go to Homepage">Home</a>
+              <a class="nav-link" href="/work.html" title="Go to work overview">Portfolio</a>
+              <a class="nav-link" href="/contact.html" title="Go to contact page">Contact</a>
             </div>
           </div>
         </div>
