--- a/work.html
+++ b/work.html
@@ -27,9 +27,9 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
-              <a class="nav-link active" href="/work.html">Portfolio</a>
-              <a class="nav-link" href="/contact.html">Contact</a>
+              <a class="nav-link" aria-current="page" href="index.html" title="Back to Homepage">Home</a>
+              <a class="nav-link active" href="/work.html" title="Go to work overview">Portfolio</a>
+              <a class="nav-link" href="/contact.html" title="Go to contact page">Contact</a>
             </div>
           </div>
         </div>
